[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "mysql", "json"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
tracing-appender = "0.2.3"
tower-http = { version = "0.5.2", features = ["request-id"] }
dotenvy = "0.15.7"
uuid = { version = "1.9.1", features = ["v4", "serde"] }
thiserror = "1.0.61"
anyhow = "1.0.86"

[dev-dependencies]
tempfile = "3.10.1"